# Connect4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/: _a_i_player_8h_source.html  _board_8h_source.html  _c_h_i_p_8h_source.html  _player_8h_source.html  annotated_dup.js  classconnect4_1_1_board-members.html  classconnect4_1_1_board.html  classconnect4_1_1_human_player.html  classconnect4_1_1_human_player.js  classconnect4_1_1_player.js  classes.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  functions_func.html  hierarchy.js  index.html  navtreedata.js
docs/html/: _game_8h_source.html  _human_player_8h_source.html  annotated.html  classconnect4_1_1_a_i_player-members.html  classconnect4_1_1_a_i_player.html  classconnect4_1_1_a_i_player.js  classconnect4_1_1_board.js  classconnect4_1_1_game-members.html  classconnect4_1_1_game.html  classconnect4_1_1_game.js  classconnect4_1_1_human_player-members.html  classconnect4_1_1_player-members.html  classconnect4_1_1_player.html  files.html  functions.html  hierarchy.html  navtreeindex0.js
docs/html/search/: all_3.js  classes_1.js  functions_0.js  functions_4.js  searchdata.js
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  functions_1.js  functions_2.js  functions_3.js
lib/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CHIP.h  CMakeLists.txt  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  STONE.h  empty.cpp
test/: CMakeLists.txt  test.cpp
